--- a/index.html
+++ b/index.html
@@ -5,105 +5,165 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vyshnavi koka</title>
     <link rel="icon" href="logo.PNG" type="image/icon type" />
-    <!DOCTYPE html>
-    <html>
-      <style>
-        * {
-          box-sizing: border-box;
-        }
+    <head>
+      <!-- Required meta tags -->
+      <meta charset="utf-8" />
+      <meta
+        name="viewport"
+        content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      />
 
-        body {
-          margin: 0;
-          font-family: Arial;
-          background-color: rgb(236, 100, 141);
-        }
+      <!-- Bootstrap CSS -->
+      <link
+        rel="stylesheet"
+        href="bootstrap-4.5.0-dist/css/bootstrap-grid.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+        crossorigin="anonymous"
+      />
+    </head>
 
-        .header {
-          text-align: center;
-          padding: 32px;
-        }
+    <style>
+      * {
+        box-sizing: border-box;
+      }
 
-        .row {
-          display: -ms-flexbox;
-          /* IE10 */
-          display: flex;
-          -ms-flex-wrap: wrap;
-          /* IE10 */
-          flex-wrap: wrap;
-          padding: 0 4px;
-        }
+      body {
+        margin: 0;
+        font-family: Arial;
+        background-color: rgb(236, 100, 141);
+      }
 
-        /* Create four equal columns that sits next to each other */
+      .header {
+        text-align: center;
+        padding: 32px;
+      }
+
+      .row {
+        display: -ms-flexbox;
+        /* IE10 */
+        display: flex;
+        -ms-flex-wrap: wrap;
+        /* IE10 */
+        flex-wrap: wrap;
+        padding: 0 4px;
+      }
+
+      /* Create four equal columns that sits next to each other */
+      .column {
+        -ms-flex: 25%;
+        /* IE10 */
+        flex: 25%;
+        max-width: 25%;
+        padding: 0 4px;
+      }
+
+      .column img {
+        margin-top: 8px;
+        vertical-align: middle;
+        width: 100%;
+      }
+
+      /* Responsive layout - makes a two column-layout instead of four columns */
+      @media screen and (max-width: 800px) {
         .column {
-          -ms-flex: 25%;
-          /* IE10 */
-          flex: 25%;
-          max-width: 25%;
-          padding: 0 4px;
+          -ms-flex: 50%;
+          flex: 50%;
+          max-width: 50%;
         }
+      }
 
-        .column img {
-          margin-top: 8px;
-          vertical-align: middle;
-          width: 100%;
+      /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+      @media screen and (max-width: 600px) {
+        .column {
+          -ms-flex: 100%;
+          flex: 100%;
+          max-width: 100%;
         }
+      }
+      .large-header {
+        position: relative;
+        width: 100%;
+        background: #111;
+        overflow: hidden;
+        background-size: cover;
+        background-position: center center;
+        z-index: 1;
+      }
 
-        /* Responsive layout - makes a two column-layout instead of four columns */
-        @media screen and (max-width: 800px) {
-          .column {
-            -ms-flex: 50%;
-            flex: 50%;
-            max-width: 50%;
-          }
+      .demo .large-header {
+        background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo-bg.jpg");
+      }
+
+      .main-title {
+        position: absolute;
+        margin: 0;
+        padding: 0;
+        color: #f9f1e9;
+        text-align: center;
+        top: 50%;
+        left: 50%;
+        -webkit-transform: translate3d(-50%, -50%, 0);
+        transform: translate3d(-50%, -50%, 0);
+      }
+
+      .demo .main-title {
+        text-transform: uppercase;
+        font-size: 4.2em;
+        letter-spacing: 0.1em;
+      }
+
+      .main-title .thin {
+        font-weight: 200;
+      }
+
+      @media only screen and (max-width: 768px) {
+        .demo .main-title {
+          font-size: 3em;
         }
+      }
+    </style>
 
-        /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-        @media screen and (max-width: 600px) {
-          .column {
-            -ms-flex: 100%;
-            flex: 100%;
-            max-width: 100%;
-          }
-        }
-      </style>
+    <body>
+      <!-- Header -->
 
-      <body>
-        <!-- Header -->
-        <div class="header">
-          <h1>My Images</h1>
-          <p>My Sweet Memories</p>
+      <div class="container demo">
+        <div class="content">
+          <div id="large-header" class="large-header">
+            <canvas id="demo-canvas"></canvas>
+            <h1 class="main-title"><span class="thin">My</span> Memories</h1>
+          </div>
         </div>
+      </div>
 
-        <!-- Photo Grid -->
-        <div class="row">
-          <div class="column">
-            <img src="3.jpg" style="width: 100%;" />
-            <img src="4.jpg" style="width: 100%;" />
-            <img src="6.jpg" style="width: 100%;" />
-            <img src="7.jpg" style="width: 100%;" />
-          </div>
-          <div class="column">
-            <img src="00.jpg" style="width: 100%;" />
-            <img src="01.jpg" style="width: 100%;" />
-            <img src="02.jpg" style="width: 100%;" />
-            <img src="03.jpg" style="width: 100%;" />
-            <img src="04.jpg" style="width: 100%;" />
-          </div>
-          <div class="column">
-            <img src="07.jpg" style="width: 100%;" />
-            <img src="08.jpg" style="width: 100%;" />
-            <img src="09.jpg" style="width: 100%;" />
-            <img src="010.jpg" style="width: 100%;" />
-          </div>
-          <div class="column">
-            <img src="13.jpg" style="width: 100%;" />
-            <img src="14.jpg" style="width: 100%;" />
-            <img src="12.jpg" style="width: 100%;" />
-            <img src="05.jpg" style="width: 100%;" />
-          </div>
+      <!-- Photo Grid -->
+      <div class="row">
+        <div class="column">
+          <img src="3.jpg" style="width: 100%;" />
+          <img src="4.jpg" style="width: 100%;" />
+          <img src="6.jpg" style="width: 100%;" />
+          <img src="7.jpg" style="width: 100%;" />
         </div>
-      </body>
-    </html>
+        <div class="column">
+          <img src="00.jpg" style="width: 100%;" />
+          <img src="01.jpg" style="width: 100%;" />
+          <img src="02.jpg" style="width: 100%;" />
+          <img src="03.jpg" style="width: 100%;" />
+          <img src="04.jpg" style="width: 100%;" />
+        </div>
+        <div class="column">
+          <img src="07.jpg" style="width: 100%;" />
+          <img src="08.jpg" style="width: 100%;" />
+          <img src="09.jpg" style="width: 100%;" />
+          <img src="010.jpg" style="width: 100%;" />
+        </div>
+        <div class="column">
+          <img src="13.jpg" style="width: 100%;" />
+          <img src="14.jpg" style="width: 100%;" />
+          <img src="12.jpg" style="width: 100%;" />
+          <img src="05.jpg" style="width: 100%;" />
+        </div>
+      </div>
+    </body>
   </head>
   <body></body>
 </html>
