--- a/index.html
+++ b/index.html
@@ -1,25 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+ <head>
+      <meta charset="utf-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+      
+      <!-- Bootstrap CSS -->
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous" />
+<title>Vyshnavi Koka</title>
+<link rel="icon" href="logo.PNG" >
+ </head>
+    <style>
+      * {
+        box-sizing: border-box;
+      }
 
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-      crossorigin="anonymous"
-    />
+      body {
+        margin: 0;
+        font-family: Arial;
+        background-color: rgb(236, 100, 141);
+      }
 
-    <title>Hello, world!</title>
+      .header {
+        text-align: center;
+        padding: 32px;
+      }
+
+      .row {
+        display: -ms-flexbox;
+        /* IE10 */
+        display: flex;
+        -ms-flex-wrap: wrap;
+        /* IE10 */
+        flex-wrap: wrap;
+        padding: 0 4px;
+      }
+
+      /* Create four equal columns that sits next to each other */
+      .column {
+        -ms-flex: 25%;
+        /* IE10 */
+        flex: 25%;
+        max-width: 25%;
+        padding: 0 4px;
+      }
+
+      .column img {
+        margin-top: 8px;
+        vertical-align: middle;
+        width: 100%;
+      }
+
+      /* Responsive layout - makes a two column-layout instead of four columns */
+      @media screen and (max-width: 800px) {
+        .column {
+          -ms-flex: 50%;
+          flex: 50%;
+          max-width: 50%;
+        }
+      }
+
+      /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+      @media screen and (max-width: 600px) {
+        .column {
+          -ms-flex: 100%;
+          flex: 100%;
+          max-width: 100%;
+        }
+      }
+      .large-header {
+        position: relative;
+        width: 100%;
+        background: #111;
+        overflow: hidden;
+        background-size: cover;
+        background-position: center center;
+        z-index: 1;
+      }
+
+      .demo .large-header {
+        background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo-bg.jpg");
+      }
+
+      .main-title {
+        position: absolute;
+        margin: 0;
+        padding: 0;
+        color: #f9f1e9;
+        text-align: center;
+        top: 50%;
+        left: 50%;
+        -webkit-transform: translate3d(-50%, -50%, 0);
+        transform: translate3d(-50%, -50%, 0);
+      }
+
+      .demo .main-title {
+        text-transform: uppercase;
+        font-size: 4.2em;
+        letter-spacing: 0.1em;
+      }
+
+      .main-title .thin {
+        font-weight: 200;
+      }
+
+      @media only screen and (max-width: 768px) {
+        .demo .main-title {
+          font-size: 3em;
+        }
+      }
+    </style>
+
+    <body>
+      <!-- Header -->
+
+      <div class="container demo">
+        <div class="content">
+          <div id="large-header" class="large-header">
+            <canvas id="demo-canvas"></canvas>
+            <h1 class="main-title" class="text-primary">
+              <span class="text-primary">My</span>
+              <span class="text-success">Memories</span>
+            </h1>
+          </div>
+        </div>
+      </div>
+
+      <!-- Photo Grid -->
+      <div class="row">
+        <div class="column">
+          <img src="3.jpg" style="width: 100%;" />
+          <img src="4.jpg" style="width: 100%;" />
+          <img src="6.jpg" style="width: 100%;" />
+          <img src="7.jpg" style="width: 100%;" />
+        </div>
+        <div class="column">
+          <img src="00.jpg" style="width: 100%;" />
+          <img src="01.jpg" style="width: 100%;" />
+          <img src="02.jpg" width="100%" height="15%" />
+          <img src="03.jpg" width="100%" height="25%" />
+          <img src="04.jpg" style="width: 100%;" />
+        </div>
+        <div class="column">
+          <img src="07.jpg" style="width: 100%;" />
+          <img src="08.jpg" style="width: 100%;" />
+          <img src="09.jpg" style="width: 100%;" />
+          <img src="010.jpg" style="width: 100%;" />
+        </div>
+        <div class="column">
+          <img src="13.jpg" style="width: 100%;" />
+          <img src="14.jpg" style="width: 100%;" />
+          <img src="12.jpg" style="width: 100%;" />
+          <img src="05.jpg" style="width: 100%;" />
+        </div>
+      </div>
+    </body>
   </head>
-
-  <body>
-    <h1 class="text-center text-primary bg-warning">Hello, world!</h1>
-  </body>
+  <body></body>
 </html>
